<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".kotlin.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_inside_fragment"
        android:textSize="@dimen/labelTextSize" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnThemeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_one" />

        <RadioButton
            android:id="@+id/btnThemeSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_second" />
    </RadioGroup>
</LinearLayout>