<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".kotlin.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_label"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/labelTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_inside_activity"
            android:textColor="?colorPrimary"
            android:gravity="center"
            android:textSize="@dimen/labelTextSize" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btnThemeOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_one"
                android:textColor="?colorSecondary" />

            <RadioButton
                android:id="@+id/btnThemeSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_second"
                android:textColor="?colorSecondary" />
        </RadioGroup>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <FrameLayout
        android:id="@+id/fragment_container_second"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>